<resources>
    <string name="app_name">Track</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Delete</string>
    <string name="due_by">Due by:</string>
    <string name="priority">Priority</string>
    <string name="done">Done?</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="low">LOW</string>
    <string name="medium">MEDIUM</string>
    <string name="high">HIGH</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="saved">Saved</string>
    <string name="deleted">Deleted</string>
</resources>
