<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout4">

    <!--<android.support.design.widget.TextInputEditText
        android:id="@+id/tiet1"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:inputType="text"
        android:hint="@string/title"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1" />-->

    <!--<android.support.design.widget.TextInputEditText
        android:id="@+id/tiet2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:inputType="text|textMultiLine"
        android:hint="@string/notes"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/tiet1"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.46" />-->

    <Switch
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        android:layout_marginTop="24dp" />

    <android.support.v7.widget.Toolbar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar3"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout4"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        app:layout_constraintHorizontal_bias="0.0" />

    <info.hoang8f.android.segmented.SegmentedGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="10dp"
        segmentedgroup:sc_tint_color="#578536"
        segmentedgroup:sc_checked_text_color="#FFFFFF"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:id="@+id/segmentedGroup2"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/tiet2"
        android:layout_marginTop="24dp">
        <RadioButton
            android:id="@+id/button_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            style="@style/RadioButton"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <RadioButton
            android:id="@+id/button_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            style="@style/RadioButton"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="0dp" />

        <RadioButton
            android:id="@+id/button_high"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/high"
            style="@style/RadioButton"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="0dp" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_date_range_black_18dp"
        android:id="@+id/date_image"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/editText" />

    <EditText
        android:layout_width="214dp"
        android:layout_height="32dp"
        android:inputType="textPersonName"
        android:text="@string/date"
        android:clickable="true"
        android:paddingBottom="4dp"
        android:id="@+id/editText"
        app:layout_constraintLeft_toLeftOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/segmentedGroup2"
        android:layout_marginTop="24dp" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_priority_high_black_18dp"
        android:id="@+id/priority_image"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/segmentedGroup2" />

    <EditText
        android:layout_width="214dp"
        android:layout_height="32dp"
        android:inputType="textPersonName"
        android:text="@string/time"
        android:clickable="true"
        android:paddingBottom="4dp"
        android:id="@+id/editText3"
        app:layout_constraintLeft_toRightOf="@+id/time_image"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginTop="24dp" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_access_time_black_18dp"
        android:id="@+id/time_image"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/editText3" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tiet1"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/tiet1_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:ems="10"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="11dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tiet2"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tiet1"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/tiet2_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/notes"
            android:inputType="textShortMessage"
            android:imeOptions="actionDone"
            android:ems="10"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="11dp" />
    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>